--- a/horizon/horizon/templates/horizon/auth/_login.html
+++ b/horizon/horizon/templates/horizon/auth/_login.html
@@ -2,9 +2,9 @@
 {% load i18n %}
 
 {% block modal-header %}Log In{% endblock %}
-{% block modal_class %}modal{% endblock %}
+{% block modal_class %}modal login{% endblock %}
 
-{% block form-action %}{% url horizon:auth_login %}{% endblock %}
+{% block form_action %}{% url horizon:auth_login %}{% endblock %}
 
 {% block modal-body %}
   {% include "horizon/_messages.html" %}
