Full support for dashboard and panel configuration via service catalog.
There are no longer any dependencies on settings for whether or not
particular components are made available in the site.

Implements blueprint toggle-features.

Also fixes bug 929983, making the Horizon object a proper
singleton and ensuring test isolation for the base horizon tests.

Fixes a case where a missing service catalog would cause
a 500 error. Fixes bug 930833,

Change-Id: If19762afe75859e63aa7bd5128a6795655df2c90

--- a/horizon/horizon/templates/horizon/_subnav_list.html
+++ b/horizon/horizon/templates/horizon/_subnav_list.html
@@ -1,14 +1,16 @@
 {% load horizon %}
 
 {% for heading, panels in components.iteritems %}
-<h4>{{ heading }}</h4>
-<ul class="main_nav">
-{% for panel in panels %}
-    {% if user|can_haz:panel %}
-        <li>
+  {% with panels|can_haz_list:user as filtered_panels %}
+    {% if filtered_panels %}
+      <h4>{{ heading }}</h4>
+      <ul class="main_nav">
+        {% for panel in filtered_panels %}
+          <li>
             <a href="{{ panel.get_absolute_url }}" {% if current == panel.slug %}class="active"{% endif %} tabindex='1'>{{ panel.name }}</a>
-        </li>
+          </li>
+        {% endfor %}
+      </ul>
     {% endif %}
-{% endfor %}
-</ul>
+  {% endwith %}
 {% endfor %}
