Cleanup on syspanel.images code, and unuset template removal.
A lot of templates got left behind after the datatables refactor which
are no longer used or necessary.

There was also some strange behavior in the syspanel images table
where outdated javascript would try to hide other rows in the table
causing bad behavior.

Change-Id: If7aa226336f0814782522b20c76eadc39613c372

--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/images/update.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/images/update.html
@@ -1,24 +1,12 @@
 {% extends 'syspanel/base.html' %}
 {% load i18n %}
-{% block title %}Update Image{% endblock %}
+
+{% block title %}{% trans "Update Image" %}{% endblock %}
 
 {% block page_header %}
   {% include "horizon/common/_page_header.html" with title=_("Update Image") %}
 {% endblock page_header %}
 
 {% block syspanel_main %}
-  <div class="modal static_page">
-    <div class="modal-header">
-      <h3>Update Image</h3>
-    </div>
-    <div class="modal-body">
-      <div class="left">
-        {% include 'syspanel/images/_update.html' %}
-      </div>
-      <div class="right">
-        <h3>{% trans "Description" %}:</h3>
-        <p>{% trans "From here you can modify different properties of an image." %}</p>
-      </div>
-    </div>
-  </div>
+  {% include 'syspanel/images/_update.html' %}
 {% endblock %}
