Fixes a style bug when a button is the first element in a button group.
Change-Id: I59cb0af67c02d26f7ad9d9f7f4e39054f217c08d

--- a/openstack-dashboard/dashboard/static/dashboard/css/style.css
+++ b/openstack-dashboard/dashboard/static/dashboard/css/style.css
@@ -659,6 +659,9 @@ td.actions_column .row_actions .hide {
 .btn-group > .btn.small {
   height: 12px;
 }
+.btn-group > button.btn.small {
+  height: 28px; /* Box model for buttons doesn't respect height + padding in all browsers. */
+}
 .btn-group .dropdown-toggle {
   height: 12px;
   padding-top: 7px;
