Coloring errors in forms red.
  * The coloring of form errors was lost in the migration to bootstrap 2, this patch adds a small style addition to fix.

Change-Id: I440cb255eacdeb6715ef772e8595409b041e70c4

--- a/openstack-dashboard/dashboard/static/dashboard/css/style.css
+++ b/openstack-dashboard/dashboard/static/dashboard/css/style.css
@@ -551,7 +551,7 @@ td .icon.ajax-updating {
 .modal fieldset .form-field input,
 .modal fieldset .form-field select,
 .modal fieldset .form-field textarea {
-  width: 100%;
+  width: 96%;
 }
 
 .modal .modal-footer input {
@@ -853,5 +853,11 @@ form div.clearfix.error {
 
 iframe {
   border: none;
+}
+
+form .error {
+  background: #fce6e6;
+  color: #b94a48;
+  border: 1px solid #E9B1B0;
 }
 
