Close button added for alert messages.
Fixes bug 937222. Uses bootstrap-alert.js functionality.
Added fade-in effect.

Patch 2: changed x symbol to &times;

Change-Id: Ie85d1b96b1fe06f72c92465434542ec4504bcc52

--- a/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/images/index.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/images/index.html
@@ -12,7 +12,8 @@
   {% if images %}
     {% include 'nova/images_and_snapshots/images/_list.html' %}
   {% else %}
-    <div class="alert alert-block alert-info">
+    <div class="alert alert-block alert-info fade in">
+      <a class="close" data-dismiss="alert" href="#">&times;</a>
       <p><strong>{% trans "Info: " %}</strong>{% trans "There are currently no images." %}</p>
     </div>
   {% endif %}
