--- a/openstack-dashboard/dashboard/static/dashboard/css/style.css
+++ b/openstack-dashboard/dashboard/static/dashboard/css/style.css
@@ -852,3 +852,36 @@ form .error {
   color: #b94a48;
   border: 1px solid #E9B1B0;
 }
+
+.progress_bar {
+  height: 100%;
+  width: 100%;
+  border: 1px solid #CCC;
+  background-color: #CCC;
+}
+
+.progress_bar_fill {
+  height: 100%;
+  background-color: #666;
+}
+
+.quota_title {
+  color: #999;
+}
+
+.quota_title strong {
+  color: #000;
+}
+
+.quota_title strong span {
+  font-weight: normal;
+}
+
+.quota_title p {
+  float: right;
+}
+
+.quota_bar {
+  height: 15px;
+  margin: -8px 0 8px;
+}
