Swift name usage cleanup. Unicode support and slash prohibition.
Ensures end-to-end support for unicode characters w/ swift in all
places where cloudfiles supports it. (patch submitted to fix cloudfiles).

Also makes sure that the forward-slash character is not allowed in
container or object names since it's a reserved character in swift.

Fixes bug 889564 and fixes bug 940689.

Change-Id: I259eb04f2f8854d43d1df28876d34b237a21fa9a

--- a/horizon/horizon/dashboards/nova/templates/nova/containers/create.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/containers/create.html
@@ -7,7 +7,7 @@
 {% endblock page_header %}
 
 {% block dash_main %}
-  {% include "nova/containers/_create.html" with form=create_form %}
+  {% include "nova/containers/_create.html" %}
 {% endblock %}
 
 
