Prevents unauth'd view calls from popping up login in modal window.
Fixes bug 929309

Note: The authentication logic is slightly changed -
login_required decorator is replaced by a Horizon decorator,
that raises NotAuthorized exception instead redirecting
to login page. Then, all unauthorized requests are now
handled by Horizon Middleware, and performs a check if
the request is from ajax call(then returns error 401),
otherwise - redirects to login page, persisting the
requested page in ?next= variable.

Change-Id: Ic90658bff2eabfe630b1f9912cf4a5aa45edf58e

--- a/horizon/horizon/templates/horizon/auth/_login.html
+++ b/horizon/horizon/templates/horizon/auth/_login.html
@@ -1,7 +1,7 @@
 {% extends "horizon/common/_modal_form.html" %}
 {% load i18n %}
 
-{% block modal-header %}Log In{% endblock %}
+{% block modal-header %}{% trans "Log In" %}{% endblock %}
 {% block modal_class %}modal login{% endblock %}
 
 {% block form_action %}{% url horizon:auth_login %}{% endblock %}
@@ -9,10 +9,11 @@
 {% block modal-body %}
   {% include "horizon/_messages.html" %}
   <fieldset>
+    {% if next %}<input type="hidden" name="{{ redirect_field_name }}" value="{{ next }}" />{% endif %}
     {% include "horizon/common/_form_fields.html" %}
   </fieldset>
 {% endblock %}
 
 {% block modal-footer %}
-  <input type="submit" class="btn btn-primary pull-right" value="{% trans "Login" %}" />
+  <input type="submit" class="btn btn-primary pull-right" value="{% trans "Log In" %}" />
 {% endblock %}
