Implements reusable tab components.
Adds a fully-featured tabbed interface component, with support
for dynamic loading via AJAX and class-based views to handle
the heavy lifting.

Cleaned up the instance detail view as a POC.

Implements blueprint reusable-tabs.

Change-Id: I3adbf1f1e4e95ae210d36477031a433c13f3d77c

--- a/openstack-dashboard/dashboard/static/dashboard/css/style.css
+++ b/openstack-dashboard/dashboard/static/dashboard/css/style.css
@@ -775,9 +775,14 @@ tr.terminated {
   margin-bottom: -5px;
 }
 
-a.view_full {
-  float: right;
-  margin: 10px 10px 0 0;
+#main_content .nav-tabs {
+  margin-bottom: 0;
+}
+
+#main_content .tab-content {
+  border: 1px solid #ddd;
+  border-top: 0 none;
+  padding: 10px;
 }
 
 .tab_wrapper {
@@ -884,4 +889,16 @@ form .error {
 .quota_bar {
   height: 15px;
   margin: -8px 0 8px;
+}
+
+#main_content .row-fluid {
+  margin: 10px 0 20px;
+}
+
+#main_content .row-fluid:last-child {
+  margin-bottom: 0;
+}
+
+.header_rule {
+  margin: 0 0 10px;
 }
