Makes the background color default to white.
Change-Id: Iba2caad9e2ec460cf770b493e396b05c604d5bc3

--- a/openstack-dashboard/dashboard/static/dashboard/css/style.css
+++ b/openstack-dashboard/dashboard/static/dashboard/css/style.css
@@ -88,9 +88,13 @@ h2 {
     font-weight: normal;
 }
 
+body {
+  background-color: #fff;
+}
+
 /* Login Splash Page */
 
-html, #splash{
+#splash{
   background: #fafafa;
 }
 
