Validates port range and displayed non-field errors.
Fixes bug 898374 and fixes bug 943004.

Change-Id: Ifffce054db78b23edcb6e1ae85e15d39afde5b26

--- a/horizon/horizon/templates/horizon/common/_form_fields.html
+++ b/horizon/horizon/templates/horizon/common/_form_fields.html
@@ -1,6 +1,11 @@
 {% for hidden in form.hidden_fields %}
   {{ hidden }}
 {% endfor %}
+{% if form.non_field_errors %}
+  <div class="alert alert-message error">
+    {{ form.non_field_errors }}
+  </div>
+{% endif %}
 {% for field in form.visible_fields %}
   <div class="form-field clearfix{% if field.errors %} error{% endif %}">
     {{ field.label_tag }}
