Small fix for forms with alert messages
This patch fixes the case when a long non-breakable word
is contained in a alert message. Then this breaks the form.
See https://pzt.me/7h0a for an example. The patch adds
overflow:hidden and word-break to css to force long words
to break on next line.

Change-Id: Ic7c2c63c1be74aa0b4e667458b92c01ee6e103cb

--- a/openstack_dashboard/static/dashboard/css/style.css
+++ b/openstack_dashboard/static/dashboard/css/style.css
@@ -343,6 +343,11 @@ table form {
     margin-bottom: 0;
 }
 
+.alert-block p {
+  overflow: hidden;
+  word-wrap: break-word;
+}
+
 .alert-block p:last-child {
   margin-bottom: 0;
 }
