--- a/openstack_dashboard/static/dashboard/css/style.css
+++ b/openstack_dashboard/static/dashboard/css/style.css
@@ -914,3 +914,11 @@ iframe {
   float: left;
   margin-right: 50px;
 }
+
+.error .help-inline {
+	background: #efdfdf;
+	border: 1px solid #ead5d8;
+	padding: 10px;
+	display: block;
+	width: 304px;
+}
