--- a/horizon/dashboards/nova/templates/nova/overview/usage.html
+++ b/horizon/dashboards/nova/templates/nova/overview/usage.html
@@ -3,7 +3,7 @@
 {% block title %}Instance Overview{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title="Overview: "|add:"<small>This page shows your cloud usage.</small>" %}
+  {% include "horizon/common/_page_header.html" with title=_("Overview") %}
 {% endblock page_header %}
 
 {% block dash_main %}
