--- a/horizon/dashboards/syspanel/templates/syspanel/overview/usage.html
+++ b/horizon/dashboards/syspanel/templates/syspanel/overview/usage.html
@@ -3,7 +3,7 @@
 {% block title %}{% trans "Usage Overview" %}{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title="Overview: "|add:"<small>This page shows overall cloud usage.</small>" %}
+  {% include "horizon/common/_page_header.html" with title=_("Overview") %}
 {% endblock page_header %}
 
 {% block main %}
