--- a/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/detail.html
+++ b/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/detail.html
@@ -1,9 +1,8 @@
 {% extends 'nova/base.html' %}
 {% load i18n sizeformat %}
-{% block title %}Instance Detail{% endblock %}
+{% block title %}{% trans "Instance Detail" %}{% endblock %}
 
 {% block page_header %}
-  {# to make searchable false, just remove it from the include statement #}
   {% include "horizon/common/_page_header.html" with title="Instance Detail: "|add:instance.name %}
 {% endblock page_header %}
 
