--- a/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/update.html
+++ b/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/update.html
@@ -1,6 +1,6 @@
 {% extends 'nova/base.html' %}
 {% load i18n %}
-{% block title %}Update Instance{% endblock %}
+{% block title %}{% trans "Update Instance" %}{% endblock %}
 
 {% block page_header %}
   {% include "horizon/common/_page_header.html" with title=_("Update Instance") %}
