add source group rule interface in security groups edit
 * fixes bug 860780
 * continues from abandoned https://review.openstack.org/3268
 * implements UI https://nebula.notableapp.com/posts/391efe1b94711ec4527b6f72a61e789b6a4a54b7
 * modified test to accomodate change
 * fix .form-field width from 96% to 90% to prevent weird overlap

Change-Id: I77af442ea4c0408556bfed8c2d1669b860219f66

--- a/horizon/dashboards/nova/templates/nova/access_and_security/security_groups/_edit_rules.html
+++ b/horizon/dashboards/nova/templates/nova/access_and_security/security_groups/_edit_rules.html
@@ -3,7 +3,7 @@
 
 {% block form_id %}security_group_rule_form{% endblock %}
 {% block form_action %}{% url horizon:nova:access_and_security:security_groups:edit_rules security_group.id %}{% endblock %}
-{% block form_class %}{{ block.super }} horizontal split_quarter{% endblock %}
+{% block form_class %}{{ block.super }} horizontal split_five{% endblock %}
 
 {% block modal_id %}security_group_rule_modal{% endblock %}
 {% block modal-header %}{% trans "Edit Security Group Rules" %}{% endblock %}
