--- a/docs/source/_static/tweaks.css
+++ b/docs/source/_static/tweaks.css
@@ -1,65 +1,93 @@
-ul.todo_list {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+body {
+  background: #fff url(../_static/header_bg.jpg) top left no-repeat;
 }
 
-ul.todo_list li {
-    display: block;
-    margin: 0;
-    padding: 7px 0;
-    border-top: 1px solid #eee;
+#header {
+  width: 950px;
+  margin: 0 auto;
+  height: 102px;
 }
 
-ul.todo_list li p {
-    display: inline;
+#header h1#logo {
+  background: url(../_static/openstack_logo.png) top left no-repeat;
+  display: block;
+  float: left;
+  text-indent: -9999px;
+  width: 175px;
+  height: 55px;
 }
 
-ul.todo_list li p.link {
-    font-weight: bold;
+#navigation {
+  background: url(../_static/header-line.gif) repeat-x 0 bottom;
+  display: block;
+  float: left;
+  margin: 27px 0 0 25px;
+  padding: 0;
 }
 
-ul.todo_list li p.details {
-    font-style: italic;
+#navigation li{
+  float: left;
+  display: block;
+  margin-right: 25px;
 }
 
-ul.todo_list li {
+#navigation li a {
+  display: block;
+  font-weight: normal;
+  text-decoration: none;
+  background-position: 50% 0;
+  padding: 20px 0 5px;
+  color: #353535;
+  font-size: 14px;
 }
 
-div.admonition {
-    border: 1px solid #8F1000;
+#navigation li a.current, #navigation li a.section {
+  border-bottom: 3px solid #cf2f19;
+  color: #cf2f19;
 }
 
-div.admonition p.admonition-title {
-    background-color: #8F1000;
-    border-bottom: 1px solid #8E8E8E;
+div.related {
+  background-color: #cde2f8;
+  border: 1px solid #b0d3f8;
 }
 
-a {
-	color: #CF2F19;
+div.related a {
+  color: #4078ba;
+  text-shadow: none;
 }
 
-div.related ul li a {
-	color: #CF2F19;
+div.sphinxsidebarwrapper {
+  padding-top: 0;
 }
 
-div.sphinxsidebar h4 {
-	background-color:#8E8E8E;
-	border:1px solid #255E6E;
-	color:white;
-	font-size:1em;
-	margin:1em 0 0.5em;
-	padding:0.1em 0 0.1em 0.5em;
+pre {
+  color: #555;
 }
 
-em {
-    font-style: normal;
+div.documentwrapper h1, div.documentwrapper h2, div.documentwrapper h3, div.documentwrapper h4, div.documentwrapper h5, div.documentwrapper h6 {
+  font-family: 'PT Sans', sans-serif !important;
+  color: #264D69;
+  border-bottom: 1px dotted #C5E2EA;
+  padding: 0;
+  background: none;
+  padding-bottom: 5px;
 }
 
-table.docutils {
-	font-size: 11px;
+div.documentwrapper h3 {
+  color: #CF2F19;
 }
 
-a tt {
-	color:#CF2F19;
+a.headerlink {
+  color: #fff !important;
+  margin-left: 5px;
+  background: #CF2F19 !important;
+}
+
+div.body {
+  margin-top: -25px;
+}
+
+div.document {
+  width: 960px;
+  margin: 0 auto;
 }
