Minor extensibility improvements.
  * Allow exceptions.handle to include user-defined exception types.
    Fixes bug 948536.
  * Adds a wrapper around the form/table header/table in the base
    _data_table.html template for easier targeting/styling.
  * Moves the rest of the main nav templating into a single template
    for easier customization. Fixes bug 948508.

Change-Id: I045c29744ee01f60b080f2c1bbdc79ea5acf1b86

--- a/horizon/templates/horizon/_nav_list.html
+++ b/horizon/templates/horizon/_nav_list.html
@@ -1,9 +1,13 @@
-{% load horizon %}
-{% for component in components %}
+{% load horizon i18n %}
+<h1 class="brand clearfix"><a href="{% url horizon:user_home %}">{% trans "OpenStack Dashboard" %}</a></h1>
+<div class='clearfix'>
+  <ul class="nav nav-tabs">
+    {% for component in components %}
     {% if user|can_haz:component %}
         <li{% if current == component.slug %} class="active"{% endif %}>
             <a href="{{ component.get_absolute_url }}" tabindex='1'>{{ component.name }}</a>
         </li>
     {% endif %}
-{% endfor %}
-
+  {% endfor %}
+  </ul>
+</div>
