Moves the branding back out of the main nav template.
It was moved in carelessly during the previous extensibility patch.

Change-Id: Ifee2817eb37e346239fa046094a55f0ad7b68188

--- a/horizon/templates/horizon/common/_sidebar.html
+++ b/horizon/templates/horizon/common/_sidebar.html
@@ -1,6 +1,8 @@
 {% load horizon i18n %}
 
 <div class='sidebar'>
+  <h1 class="brand clearfix"><a href="{% url horizon:user_home %}">{% trans "OpenStack Dashboard" %}</a></h1>
+
   {% horizon_main_nav %}
 
   {% if request.horizon.dashboard.supports_tenants %}
