Minor extensibility tweaks (sidebar context and div wrapper)
  * Adds the request to the sidebar templatetag template contexts.
    Fixes bug 948670.
  * Adds a wrapper div around the usage summary information at the
    top of the common usage template.

Change-Id: I1404c52c6d5e75324038683dbb3a92276b075c78

--- a/horizon/templates/horizon/common/_usage_summary.html
+++ b/horizon/templates/horizon/common/_usage_summary.html
@@ -1,17 +1,19 @@
 {% load i18n sizeformat %}
 
-<form action="" method="get" id="date_form" class="form-horizontal">
-  <h3>{% trans "Select a month to query its usage" %}: </h3>
-  <div class="form-row">
-    {{ form.month }}
-    {{ form.year }}
-    <input class="btn btn-small" type="submit"/>
-  </div>
-</form>
+<div class="usage_info_wrapper">
+  <form action="" method="get" id="date_form" class="form-horizontal">
+    <h3>{% trans "Select a month to query its usage" %}: </h3>
+    <div class="form-row">
+      {{ form.month }}
+      {{ form.year }}
+      <input class="btn btn-small" type="submit"/>
+    </div>
+  </form>
 
-<p id="activity">
-  <span><strong>{% trans "Active Instances" %}:</strong> {{ usage.summary.instances|default:'-' }}</span>
-  <span><strong>{% trans "Active Memory" %}:</strong> {{ usage.summary.memory_mb|mbformat|default:'-' }}</span>
-  <span><strong>{% trans "This Month's VCPU-Hours" %}:</strong> {{ usage.summary.vcpu_hours|floatformat:2|default:'-' }}</span>
-  <span><strong>{% trans "This Month's GB-Hours" %}:</strong> {{ usage.summary.disk_gb_hours|floatformat:2|default:'-' }}</span>
-</p>
+  <p id="activity">
+    <span><strong>{% trans "Active Instances" %}:</strong> {{ usage.summary.instances|default:'-' }}</span>
+    <span><strong>{% trans "Active Memory" %}:</strong> {{ usage.summary.memory_mb|mbformat|default:'-' }}</span>
+    <span><strong>{% trans "This Month's VCPU-Hours" %}:</strong> {{ usage.summary.vcpu_hours|floatformat:2|default:'-' }}</span>
+    <span><strong>{% trans "This Month's GB-Hours" %}:</strong> {{ usage.summary.disk_gb_hours|floatformat:2|default:'-' }}</span>
+  </p>
+</div>
