Show security groups for instance in overview detail.
Fixes bug 897090, since IP information is displayed as nova returns it.

Change-Id: If64ec14ba4cf6b081a7a99aa7ccee0aef70efa35

--- a/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_detail_overview.html
+++ b/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_detail_overview.html
@@ -36,6 +36,25 @@
   </ul>
 </div>
 
+<div class="security_groups row-fluid">
+  <h4>{% trans "Security Groups" %}</h4>
+  <hr class="header_rule">
+  {% for group in instance.security_groups %}
+  <ul>
+    <li>
+      <strong>{{ group.name }}</strong>
+      <ul>
+      {% for rule in group.rules %}
+        <li>{{ rule }}</li>
+        {% empty %}
+        <li><em>{% trans "No rules defined." %}</em></li>
+      {% endfor %}
+      </ul>
+    </li>
+  </ul>
+  {% endfor %}
+</div>
+
 <div class="meta row-fluid">
   <h4>{% trans "Meta" %}</h4>
   <hr class="header_rule">
