--- a/horizon/dashboards/settings/templates/settings/user/_language.html
+++ b/horizon/dashboards/settings/templates/settings/user/_language.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block form_id %}language_settings_form{% endblock %}
-{% block form_action %}/i18n/setlang/{% endblock %}
+{% block form_action %}{% url horizon:set_language %}{% endblock %}
 
 {% block modal_id %}language_settings_modal{% endblock %}
 {% block modal-header %}{% trans "Select Language" %}{% endblock %}
