Restores volume attachment list to instance details.
Change-Id: Ieea404da567642882dbf23b66d485139179cdf51

--- a/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_detail_overview.html
+++ b/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_detail_overview.html
@@ -49,7 +49,7 @@
   <h4>{% trans "Volumes" %}</h4>
   <hr class="header_rule">
   <ul>
-    {% if volumes %}
+    {% if instance.volumes %}
       {% for volume in instance.volumes %}
       <li>
         <strong>{% trans "Volume" %}:</strong>
