Changes 'project settings' to a more fitting 'OpenStack Credentials'
  * fixes bug 953373

Change-Id: I1546e8b3e47aea0762efe68dfbc7d233e86b26a0

--- a/horizon/dashboards/settings/templates/settings/project/_openrc.html
+++ b/horizon/dashboards/settings/templates/settings/project/_openrc.html
@@ -5,7 +5,7 @@
 {% block form_action %}{% url horizon:settings:project:index %}{% endblock %}
 
 {% block modal_id %}language_settings_modal{% endblock %}
-{% block modal-header %}{% trans "Download RC File" %}{% endblock %}
+{% block modal-header %}{% trans "Download OpenStack RC File" %}{% endblock %}
 
 {% block modal-body %}
 <div class="left">
