--- a/horizon/templates/horizon/client_side/_modal.html
+++ b/horizon/templates/horizon/client_side/_modal.html
@@ -15,7 +15,7 @@
   </div>
   <div class='modal-footer'>
     <a href='#' class='btn btn-primary'>[[confirm]]</a>
-    <a href='#' class='btn' data-dismiss='modal'>[[cancel]]</a>
+    <a href='#' class='btn cancel' data-dismiss='modal'>[[cancel]]</a>
   </div>
 </div>
 {% endjstemplate %}
