--- a/horizon/templates/horizon/common/_data_table_row.html
+++ b/horizon/templates/horizon/common/_data_table_row.html
@@ -1,3 +1,3 @@
-<tr id="{{ row.id }}" class="{{ row.status_class }}">
+<tr {{ row.attr_string|safe }}>
   {% for cell in row %}<td class="{{ cell.get_classes }}">{{ cell.value }}</td>{% endfor %}
 </tr>
