Updates Image Details page to match other details pages. Fixes bug 955625.
While updating these, a bug was discovered in the tab exception handling
which is also fixed by this patch. Fixes bug 955642.

Also incorporates some cleanup on the other details pages so that
they are all uniform and at their best.

Additionally, added a command to run_tests.sh to update all the translation
strings (./run_tests.sh -m or --makemessages).

Updates translation files.

Change-Id: I61287b91fb442f7343c2ddebfcc547dc559efbdf

--- a/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_detail_overview.html
+++ b/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_detail_overview.html
@@ -3,12 +3,19 @@
 <h3>{% trans "Instance Overview" %}</h3>
 
 <div class="status row-fluid">
+  <h4>{% trans "Info" %}</h4>
+  <hr class="header_rule">
+  <ul>
+    <li><strong>{% trans "Name" %}:</strong>&nbsp;{{ instance.name }}</li>
+    <li><strong>{% trans "ID" %}:</strong>&nbsp;{{ instance.id }}</li>
+  </ul>
+</div>
+
+<div class="status row-fluid">
   <h4>{% trans "Status" %}</h4>
   <hr class="header_rule">
   <ul>
-    <li><strong>{% trans "Status" %}:</strong>&nbsp;{{ instance.status }}</li>
-    <li><strong>{% trans "Instance Name" %}:</strong>&nbsp;{{ instance.name }}</li>
-    <li><strong>{% trans "Instance ID" %}:</strong>&nbsp;{{ instance.id }}</li>
+    <li><strong>{% trans "Status" %}:</strong>&nbsp;{{ instance.status|title }}</li>
   </ul>
 </div>
 
@@ -60,7 +67,8 @@
   <hr class="header_rule">
   <ul>
     <li><strong>{% trans "Key name" %}:</strong>&nbsp;{% if instance.key_name %}{{ instance.key_name }}{% else %}<em>None</em>{% endif %}</li>
-    <li><strong>{% trans "Image Name" %}:</strong>&nbsp;{{ instance.image_name }}</li>
+    {% url horizon:nova:images_and_snapshots:images:detail instance.image.id as image_url %}
+    <li><strong>{% trans "Image Name" %}:</strong>&nbsp;<a href="{{ image_url }}">{{ instance.image_name }}</a></li>
   </ul>
 </div>
 
