reset table to empty look if row becomes empty during updates
 * fixes bug 955706

Change-Id: Icb4190ce8cf20e3375c237f6729c64cb17f404e1

--- a/openstack_dashboard/templates/base.html
+++ b/openstack_dashboard/templates/base.html
@@ -27,6 +27,7 @@
     {% block js %}
       {% include "_scripts.html" %}
       {% include "horizon/client_side/_modal.html" %}
+      {% include "horizon/client_side/_table_row.html" %}
     {% endblock %}
   </body>
 </html>
