--- a/horizon/dashboards/syspanel/templates/syspanel/overview/usage.html
+++ b/horizon/dashboards/syspanel/templates/syspanel/overview/usage.html
@@ -6,7 +6,7 @@
   {% include "horizon/common/_page_header.html" with title=_("Overview") %}
 {% endblock page_header %}
 
-{% block main %}
+{% block syspanel_main %}
   {% if monitoring %}
     <div id="monitoring">
       <h3>{% trans "Monitoring" %}: </h3>
