--- a/horizon/dashboards/nova/templates/nova/instances_and_volumes/volumes/_create.html
+++ b/horizon/dashboards/nova/templates/nova/instances_and_volumes/volumes/_create.html
@@ -5,7 +5,7 @@
 {% block form_action %}{% url horizon:nova:instances_and_volumes:volumes:create %}{% endblock %}
 
 {% block modal_id %}create_volume_modal{% endblock %}
-{% block modal-header %}create_volume_form{% endblock %}
+{% block modal-header %}{% trans "Create Volume" %}{% endblock %}
 
 {% block modal-body %}
 <div class="left">
