--- a/horizon/templates/horizon/common/_data_table.html
+++ b/horizon/templates/horizon/common/_data_table.html
@@ -1,11 +1,11 @@
 <div class="table_wrapper">
   <form action="{{ table.get_absolute_url }}" method="POST">{% csrf_token %}
-  <div class='table_header'>
-    <h3 class='table_title'>{{ table }}</h3>
-    {{ table.render_table_actions }}
-  </div>
   {% with columns=table.get_columns rows=table.get_rows %}
   <table id="{{ table.name }}" class="table table-bordered table-striped">
+    <caption class='table_header'>
+      <h3 class='table_title'>{{ table }}</h3>
+      {{ table.render_table_actions }}
+    </caption>
     <thead>
       <tr>
         {% for column in columns %}
