--- a/openstack_dashboard/static/dashboard/css/style.css
+++ b/openstack_dashboard/static/dashboard/css/style.css
@@ -287,6 +287,7 @@ a.current_item:hover h3, a.current_item:hover h4 {
 
 .table_header {
   height: 30px;
+  padding: 5px 0;
 }
 
 .table_title h3, .table_header h3 {
