Added AJAX updating error handling.
  * Splits the AJAX complete method into complete, success, and error.
  * Cleans up 404 (e.g. gone/deleted) handling.
  * Adds 5XX error handling.
  * Adds client-side alert message templating.
  * Adds client-side conf (debug and static_url) loaded from backend.

Fixes bug 957461.

Change-Id: I5114430d35e2d20603e817651540b2db1f8a4d07

--- a/openstack_dashboard/templates/_scripts.html
+++ b/openstack_dashboard/templates/_scripts.html
@@ -12,9 +12,13 @@
 
 {% comment %} Horizon-specific JS {% endcomment %}
 <script src='{{ STATIC_URL }}horizon/js/horizon.js' type='text/javascript' charset='utf-8'></script>
+{% include "horizon/client_side/conf.html" %}
 <script src='{{ STATIC_URL }}horizon/js/tabs.js' type='text/javascript' charset='utf-8'></script>
 <script src='{{ STATIC_URL }}horizon/js/plugins.js' type='text/javascript' charset='utf-8'></script>
 <script src='{{ STATIC_URL }}horizon/js/tables.js' type='text/javascript' charset='utf-8'></script>
 <script src='{{ STATIC_URL }}horizon/js/modals.js' type='text/javascript' charset='utf-8'></script>
 <script src='{{ STATIC_URL }}horizon/js/forms.js' type='text/javascript' charset='utf-8'></script>
 <script src='{{ STATIC_URL }}horizon/js/form_examples.js' type='text/javascript' charset='utf-8'></script>
+
+{% comment %} Client-side Templates {% endcomment %}
+{% include "horizon/client_side/templates.html" %}
