Add a select all checkbox at table header dynamically
 * implements wishlist at bug 959017

Change-Id: I22a1fc3007dcf69e5f3f0d9eac48adbe62ad8035

--- a/openstack_dashboard/static/dashboard/css/style.css
+++ b/openstack_dashboard/static/dashboard/css/style.css
@@ -738,7 +738,7 @@ th.multi_select_column, td.multi_select_column {
   width: 25px;
 }
 
-td.multi_select_column {
+th.multi_select_column, td.multi_select_column {
   text-align: center;
 }
 
