Handle custom column classes; inherit from HTMLElement.
  * Fixes bug 960588, allowing custom (and mixed) column classes
    to be handled appropriately in the table metaclass.
  * Reworks Column and Cell to inherit from HTMLElement, making
    them both more consistent and easier to customize.
    Fixes bug 960590.

Change-Id: I88ec6d8d66703f11c508b4c10af439e3b732b3ce

--- a/horizon/templates/horizon/common/_data_table.html
+++ b/horizon/templates/horizon/common/_data_table.html
@@ -9,7 +9,7 @@
     <thead>
       <tr>
         {% for column in columns %}
-          <th class="{{ column.get_classes }}">{{ column }}</th>
+          <th {{ column.attr_string|safe }}>{{ column }}</th>
         {% endfor %}
       </tr>
     </thead>
