--- a/openstack_dashboard/static/dashboard/css/style.css
+++ b/openstack_dashboard/static/dashboard/css/style.css
@@ -43,6 +43,7 @@ ul {
   margin-left: -25px;
   margin-bottom: 20px;
   margin-right: -25px;
+  min-width: 700px;
 }
 
 .topbar .switcher_bar {
@@ -90,6 +91,7 @@ h2 {
 
 body {
   background-color: #fff;
+  min-width: 890px;
 }
 
 /* Login Splash Page */
