--- a/horizon/templates/horizon/common/_data_table_row_actions.html
+++ b/horizon/templates/horizon/common/_data_table_row_actions.html
@@ -6,7 +6,7 @@
     {% for action in row_actions %}
         {% if forloop.first %}
           {% include "horizon/common/_data_table_row_action.html" %}
-          <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+          <a class="btn dropdown-toggle {{ action.class_string|safe }}" data-toggle="dropdown" href="#">
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu row_actions clearfix">
