Rework translation for panel and dashboard names. Marked more strings.
Uses ugettext_lazy to delay translation; reworks the __repr__
method to avoid using the translated form; and changes the
unicode method of the HorizonComponent class to actually return a
string coerced to unicode rather than a proxy object.

In the process, many more strings which had been missed have been
marked for translation.

Fixes bug 910297.

Change-Id: Ie8d10a928b0419313e6c54b0eff7a3a37299ca83

--- a/horizon/templates/horizon/common/_data_table.html
+++ b/horizon/templates/horizon/common/_data_table.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <div class="table_wrapper">
   <form action="{{ table.get_absolute_url }}" method="POST">{% csrf_token %}
   {% with columns=table.get_columns rows=table.get_rows %}
@@ -25,7 +26,7 @@
     <tfoot>
       <tr>
         <td colspan="{{ table.get_columns|length }}">
-          <span>Displaying {{ rows|length }} item{{ rows|pluralize }}</span>
+          <span>{% blocktrans count counter=rows|length %}Displaying {{ counter }} item{% plural %}Displaying {{ counter }} items{% endblocktrans %}</span>
           {% if table.has_more_data %}
           <span class="spacer">|</span>
           <a href="?marker={{ table.get_marker }}">More&nbsp;&raquo;</a>
